Fix alignment on footer navigation

--- a/sass/custom.css
+++ b/sass/custom.css
@@ -236,6 +236,11 @@ footer .logo-inline {
   display: block;
 }
 
+
+footer .navigation {
+  text-align: center;
+}
+
 footer .navigation a {
   display: inline;
   margin-right: 1rem;
